# COSC2626-A1

./: .gitignore  app.wsgi  load_bucket.py  load_login.py  load_music.py  pyproject.toml
app/: app.py  auth.py  config.ini  forms.py  pyproject.toml  routes.py
app/cloud/: s3.py  tables.py
app/static/: login.json
app/static/js/: fullheight.js
app/templates/: bar.html  database.html  home.html  login.html  register.html
