[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "matt", email = "s3785111@student.rmit.edu.au"},
]
dependencies = [
    "boto3>=1.26.100",
    "botocore>=1.29.100",
    "flask>=2.2.3",
    "flask-login>=0.6.2",
    "wtforms>=3.0.1",
    "email-validator>=1.3.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pyright]
extraPaths = ["__pypackages__/<major.minor>/lib/"]
